BTWCT-1152: Fixed tablet overlay and header alignments

--- a/waters-aem-frontend/src/styles/filters.scss
+++ b/waters-aem-frontend/src/styles/filters.scss
@@ -349,6 +349,9 @@
         }
 
         @include tablet-and-under {
+            width: 40vw;
+            margin-left: -20px;
+            padding-right: 20px;
             display: block;
         }
 
@@ -493,6 +496,7 @@ $header-height: 74px;
             display: block;
         }
         .overlay {
+            visibility: visible;
             display: block;
             margin: -40px;
         }
