--- a/waters-aem-frontend/src/styles/header.scss
+++ b/waters-aem-frontend/src/styles/header.scss
@@ -20,15 +20,20 @@
         z-index: 999;
         height: 100vh;
         position: fixed;
-        transition: all 0.25s ease;
+        transition: opacity 0.25s ease;
         opacity: 0;
+        visibility: hidden!important;
 
         @include mobile {
             display: none !important;
         }
 
         &.active {
+            visibility: visible!important;
             opacity: 1;
+            @include tablet {
+                margin: 0;
+            }
         }
     }
 
@@ -44,7 +49,7 @@
 
         &__logo {
             padding: ($space-s + $space-xxxs) 0 $space-s 0;
-            
+
             img {
                 height: 32px;
                 width: 115px;
@@ -56,11 +61,11 @@
 
             }
         }
-    
+
         &__nav {
             display: flex;
             margin-left: auto;
-    
+
             ul {
                 list-style: none;
                 padding: 0;
@@ -76,7 +81,7 @@
                     vertical-align: top;
                     margin-left: $space-s;
                     margin-bottom: 0;
-        
+
                     @include mobile-xs {
                         margin-left: $space-xxs;
                     }
@@ -85,15 +90,15 @@
                     &:last-of-type {
                         margin-left: 0;
                     }
-        
+
                     .cmp-header-links__link > span {
                         float: left;
-                        
+
                         @include mobile {
                             display: none;
                         }
                     }
-        
+
                     svg,
                     img.inline-svg {
                         display: inline-block;
@@ -101,12 +106,12 @@
                         width: 30px;
                         height: 25px;
                         padding-left: 0.3em;
-        
+
                         .st0,
                         .st1 {
                             stroke: $color-gray-50;
                         }
-        
+
                         @include mobile {
                             width: 26px;
                             height: 26px;
@@ -120,7 +125,7 @@
                     }
                 }
             }
-    
+
             .top-bar__nav__user,
             .top-bar__nav__search,
             .top-bar__nav__cart {
@@ -130,15 +135,15 @@
             .top-bar__nav__user {
                 position: relative;
                 z-index: 1000;
-        
+
                 @include mobile {
                     min-width: 0 !important;
                 }
-        
+
                 .greeting-text {
                     display: none;
                 }
-        
+
                 &__dropdown {
                     display: block;
                     width: 100%;
@@ -155,25 +160,25 @@
                     transition: all 0.2s ease;
                     visibility: hidden;
                     box-shadow: $shadow;
-        
+
                     &__item{
                         margin: 0;
                         width: 100%;
-        
+
                         a {
                             span{
                                 display: block;
                                 float: none;
                                 padding: 14px 10px 2px 23px;
                             }
-        
+
                             @include font-utility;
                             transition: $hover-transition;
-            
+
                             &:hover {
                                 color: $color-link;
                             }
-            
+
                             &:active {
                                 @include font-utility;
                             }
@@ -183,28 +188,28 @@
                         }
                     }
                 }
-        
-                &.loggedIn {      
+
+                &.loggedIn {
 
                     .top-bar__nav__user__link {
                         svg .st1,
                         svg .st0{
                             stroke: $color-teal-30;
-                        }  
+                        }
                     }
 
                     .greeting-text {
                         display: inline-block;
-        
+
                         @include mobile {
                             display: none
                         }
                     }
-            
+
                     .sign-in-text {
                         display: none;
                     }
-        
+
                     @include tablet-and-over{
                         &:hover{
                             .top-bar__nav__user__dropdown{
@@ -213,9 +218,9 @@
                             }
                         }
                     }
-        
-        
-        
+
+
+
                 }
             }
 
@@ -249,7 +254,7 @@
         html.noscroll &__navigation{
             height: 100%;
             height: -moz-available;
-            height: -webkit-fill-available; 
+            height: -webkit-fill-available;
             height: fill-available;
             overflow-y: auto;
         }
